# claudekit-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  biome.json  cli-manifest.json  package.json  playwright.config.ts
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  desktop-build.yml
docs/: ck-command-flow-guide.md  cli-reference.md  codebase-summary.md  project-roadmap.md  reconciliation-architecture.md  system-architecture.md
scripts/: check-help-parity.ts  check-metadata-deletions.js  check-release-dry-run.js  generate-cli-manifest.ts  generate-cli-reference.ts  generate-desktop-release-manifest.ts  regen-desktop-icons.sh  send-discord-release.cjs  sync-desktop-bundle-config.ts  validate-desktop-bundle-config.ts  validate-desktop-icon-source.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: lib.rs  main.rs  projects.rs  tray.rs
src-tauri/src/commands/: agents.rs  commands-browser.rs  config.rs  dashboard.rs  mcp.rs  mod.rs  plans.rs  sessions.rs  skills-browser.rs  system.rs
src-tauri/src/core/: config_parser.rs  frontmatter.rs  mod.rs  paths.rs  project_ids.rs  schema.rs
src/cli/: command-registry.ts  version-display.ts
src/commands/: update-cli.ts
src/schemas/: ck-config.schema.json
src/shared/: path-resolver.ts  process-lock.ts  skip-directories.ts
src/types/: ck-config.ts  desktop.ts  index.ts  skills-dependencies.ts
src/ui/: CLAUDE.md  package.json  vite.config.ts
tests/: desktop-icons.test.ts
tests/cli/: help-parity.test.ts
(+378 files in other folders)
